--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,212 +1,209 @@
 <title>{{{title}}}</title>
 <section id="home-section" class="hero">
-		  <div class="home-slider owl-carousel">
-	      <div class="slider-item" style="background-image: url(images/bg_1.jpg);">
-	      	<div class="overlay"></div>
-	        <div class="container">
-	          <div class="row slider-text justify-content-center align-items-center" data-scrollax-parent="true">
-
-	            <div class="col-md-12 ftco-animate text-center">
-	              <h1 class="mb-2">Cung cấp rau củ &amp; Trái cây tươi</h1>
-	              <h2 class="subheading mb-4">Mang đến bạn Rau &amp; Trái cây tươi ngon, bổ dưỡng</h2>
-	              <p><a href="#" class="btn btn-primary">Xem thêm</a></p>
-	            </div>
-
-	          </div>
-	        </div>
-	      </div>
-
-	      <div class="slider-item" style="background-image: url(images/bg_2.jpg);">
-	      	<div class="overlay"></div>
-	        <div class="container">
-	          <div class="row slider-text justify-content-center align-items-center" data-scrollax-parent="true">
-
-	            <div class="col-sm-12 ftco-animate text-center">
-	              <h1 class="mb-2">100% Tươi ngon &amp; Bổ Dưỡng</h1>
-	              <h2 class="subheading mb-4">We deliver organic Rau &amp; Trái cây tươi ngon, bổ dưỡng</h2>
-	              <p><a href="#" class="btn btn-primary">Xem thêm</a></p>
-	            </div>
-	          </div>
-	        </div>
-	      </div>
-	    </div>
-    </section>
-
-    <section class="ftco-section">
+	<div class="home-slider owl-carousel">
+		<div class="slider-item" style="background-image: url(images/bg_1.jpg);">
+			<div class="overlay"></div>
 			<div class="container">
-				<div class="row no-gutters ftco-services">
-          <div class="col-md-3 text-center d-flex align-self-stretch ftco-animate">
-            <div class="media block-6 services mb-md-0 mb-4">
-              <div class="icon bg-color-1 active d-flex justify-content-center align-items-center mb-2">
-            		<span class="flaticon-shipped"></span>
-              </div>
-              <div class="media-body">
-                <h3 class="heading">Giao hàng miễn phí</h3>
-                <span>Đối với hoá đon trên 500.0000vnđ</span>
-              </div>
-            </div>      
-          </div>
-          <div class="col-md-3 text-center d-flex align-self-stretch ftco-animate">
-            <div class="media block-6 services mb-md-0 mb-4">
-              <div class="icon bg-color-2 d-flex justify-content-center align-items-center mb-2">
-            		<span class="flaticon-diet"></span>
-              </div>
-              <div class="media-body">
-                <h3 class="heading">Luôn luôn tươi ngon</h3>
-                <span>Đóng gói đảm bảo</span>
-              </div>
-            </div>    
-          </div>
-          <div class="col-md-3 text-center d-flex align-self-stretch ftco-animate">
-            <div class="media block-6 services mb-md-0 mb-4">
-              <div class="icon bg-color-3 d-flex justify-content-center align-items-center mb-2">
-            		<span class="flaticon-award"></span>
-              </div>
-              <div class="media-body">
-                <h3 class="heading">Chất lượng hảo hạng</h3>
-                <span>Chất lượng là ưu tiên hàng đầu</span>
-              </div>
-            </div>      
-          </div>
-          <div class="col-md-3 text-center d-flex align-self-stretch ftco-animate">
-            <div class="media block-6 services mb-md-0 mb-4">
-              <div class="icon bg-color-4 d-flex justify-content-center align-items-center mb-2">
-            		<span class="flaticon-customer-service"></span>
-              </div>
-              <div class="media-body">
-                <h3 class="heading">Hỗ trợ</h3>
-                <span>Sẵn sàng 24/7</span>
-              </div>
-            </div>      
-          </div>
-        </div>
+				<div class="row slider-text justify-content-center align-items-center" data-scrollax-parent="true">
+
+					<div class="col-md-12 ftco-animate text-center">
+						<h1 class="mb-2">Cung cấp rau củ &amp; Trái cây tươi</h1>
+						<h2 class="subheading mb-4">Mang đến bạn Rau &amp; Trái cây tươi ngon, bổ dưỡng</h2>
+						<p><a href="#" class="btn btn-primary">Xem thêm</a></p>
+					</div>
+
+				</div>
 			</div>
-		</section>
+		</div>
 
-		<section class="ftco-section ftco-category ftco-no-pt">
+		<div class="slider-item" style="background-image: url(images/bg_2.jpg);">
+			<div class="overlay"></div>
 			<div class="container">
+				<div class="row slider-text justify-content-center align-items-center" data-scrollax-parent="true">
+
+					<div class="col-sm-12 ftco-animate text-center">
+						<h1 class="mb-2">100% Tươi ngon &amp; Bổ Dưỡng</h1>
+						<h2 class="subheading mb-4">We deliver organic Rau &amp; Trái cây tươi ngon, bổ dưỡng</h2>
+						<p><a href="#" class="btn btn-primary">Xem thêm</a></p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</section>
+
+<section class="ftco-section">
+	<div class="container">
+		<div class="row no-gutters ftco-services">
+			<div class="col-md-3 text-center d-flex align-self-stretch ftco-animate">
+				<div class="media block-6 services mb-md-0 mb-4">
+					<div class="icon bg-color-1 active d-flex justify-content-center align-items-center mb-2">
+						<span class="flaticon-shipped"></span>
+					</div>
+					<div class="media-body">
+						<h3 class="heading">Giao hàng miễn phí</h3>
+						<span>Đối với hoá đon trên 500.0000vnđ</span>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-3 text-center d-flex align-self-stretch ftco-animate">
+				<div class="media block-6 services mb-md-0 mb-4">
+					<div class="icon bg-color-2 d-flex justify-content-center align-items-center mb-2">
+						<span class="flaticon-diet"></span>
+					</div>
+					<div class="media-body">
+						<h3 class="heading">Luôn luôn tươi ngon</h3>
+						<span>Đóng gói đảm bảo</span>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-3 text-center d-flex align-self-stretch ftco-animate">
+				<div class="media block-6 services mb-md-0 mb-4">
+					<div class="icon bg-color-3 d-flex justify-content-center align-items-center mb-2">
+						<span class="flaticon-award"></span>
+					</div>
+					<div class="media-body">
+						<h3 class="heading">Chất lượng hảo hạng</h3>
+						<span>Chất lượng là ưu tiên hàng đầu</span>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-3 text-center d-flex align-self-stretch ftco-animate">
+				<div class="media block-6 services mb-md-0 mb-4">
+					<div class="icon bg-color-4 d-flex justify-content-center align-items-center mb-2">
+						<span class="flaticon-customer-service"></span>
+					</div>
+					<div class="media-body">
+						<h3 class="heading">Hỗ trợ</h3>
+						<span>Sẵn sàng 24/7</span>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</section>
+
+<section class="ftco-section ftco-category ftco-no-pt">
+	<div class="container">
+		<div class="row">
+			<div class="col-md-8">
 				<div class="row">
-					<div class="col-md-8">
-						<div class="row">
-							<div class="col-md-6 order-md-last align-items-stretch d-flex">
-								<div class="category-wrap-2 ftco-animate img align-self-stretch d-flex" style="background-image: url(images/category.jpg);">
-									<div class="text text-center">
-										<h2>Rau</h2>
-										<p>Bảo vệ sức khoẻ cho mọi nhà</p>
-										<p><a href="#" class="btn btn-primary">Mua ngay</a></p>
-									</div>
-								</div>
-							</div>
-							<div class="col-md-6">
-								<div class="category-wrap ftco-animate img mb-4 d-flex align-items-end" style="background-image: url(images/category-1.jpg);">
-									<div class="text px-3 py-1">
-										<h2 class="mb-0"><a href="#">Rau củ</a></h2>
-									</div>
-								</div>
-								<div class="category-wrap ftco-animate img d-flex align-items-end" style="background-image: url(images/category-2.jpg);">
-									<div class="text px-3 py-1">
-										<h2 class="mb-0"><a href="#">Trái cây</a></h2>
-									</div>
-								</div>
+					<div class="col-md-6 order-md-last align-items-stretch d-flex">
+						<div class="category-wrap-2 ftco-animate img align-self-stretch d-flex"
+							style="background-image: url(images/category.jpg);">
+							<div class="text text-center">
+								<h2>Rau</h2>
+								<p>Bảo vệ sức khoẻ cho mọi nhà</p>
+								<p><a href="/san-pham" class="btn btn-primary">Mua ngay</a></p>
 							</div>
 						</div>
 					</div>
-
-					<div class="col-md-4">
-						<div class="category-wrap ftco-animate img mb-4 d-flex align-items-end" style="background-image: url(images/category-3.jpg);">
+					<div class="col-md-6">
+						<div class="category-wrap ftco-animate img mb-4 d-flex align-items-end"
+							style="background-image: url(/images/category-1.jpg);">
 							<div class="text px-3 py-1">
-								<h2 class="mb-0"><a href="#">Nước ép</a></h2>
-							</div>		
+								<h2 class="mb-0"><a href="#">Rau củ</a></h2>
+							</div>
 						</div>
-						<div class="category-wrap ftco-animate img d-flex align-items-end" style="background-image: url(images/category-4.jpg);">
+						<div class="category-wrap ftco-animate img d-flex align-items-end"
+							style="background-image: url(/images/category-2.jpg);">
 							<div class="text px-3 py-1">
-								<h2 class="mb-0"><a href="#">Hạt sấy khô</a></h2>
+								<h2 class="mb-0"><a href="#">Trái cây</a></h2>
 							</div>
 						</div>
 					</div>
 				</div>
 			</div>
-		</sectin>
 
-    <section class="ftco-section">
-    	<div class="container">
-				<div class="row justify-content-center mb-3 pb-3">
-          <div class="col-md-12 heading-section text-center ftco-animate">
-          	<span class="subheading">Sản phẩm tiêu biểu</span>
-            <h2 class="mb-4">Sản phẩm của chúng tôi</h2>
-          </div>
-        </div>   		
-    	</div>
-    	<div class="container">
-    		<div class="row">
-    			{{#each products}}
-			<div class="col-md-6 col-lg-3 ftco-animate">
-				<div class="product">
-					<a href="/chi-tiet?productId={{{_id}}}" class="img-prod"><img class="img-fluid" src="{{{img}}}"
-							alt="Colorlib Template">
+			<div class="col-md-4">
+				<div class="category-wrap ftco-animate img mb-4 d-flex align-items-end"
+					style="background-image: url(/images/category-3.jpg);">
+					<div class="text px-3 py-1">
+						<h2 class="mb-0"><a href="#">Nước ép</a></h2>
+					</div>
+				</div>
+				<div class="category-wrap ftco-animate img d-flex align-items-end"
+					style="background-image: url(/images/category-4.jpg);">
+					<div class="text px-3 py-1">
+						<h2 class="mb-0"><a href="#">Hạt sấy khô</a></h2>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	</sectin>
+
+	<section class="ftco-section">
+		<div class="container">
+			<div class="row justify-content-center mb-3 pb-3">
+				<div class="col-md-12 heading-section text-center ftco-animate">
+					<span class="subheading">Sản phẩm tiêu biểu</span>
+					<h2 class="mb-4">Sản phẩm của chúng tôi</h2>
+				</div>
+			</div>
+		</div>
+		<div class="container">
+			<div class="row">
+				{{#each products}}
+				<div class="col-md-6 col-lg-3 ftco-animate">
+					<div class="product">
+						<a href="/chi-tiet?productId={{{_id}}}" class="img-prod"><img class="img-fluid" src="{{{img}}}"
+								alt="Colorlib Template">
 							{{#if salePrice}}
-						<span class="status">SALE</span>
-						{{/if}}
-						<div class="overlay"></div>
-					</a>
-					<div class="text py-3 pb-4 px-3 text-center">
-						<h3><a href="/chi-tiet?productId={{{_id}}}">{{{name}}}</a></h3>
-						<div class="d-flex">
-							<div class="pricing">
-								{{#if salePrice}}
-								<p class="price"><span class="mr-2 price-dc">&#8363;{{{price}}}</span><span
-										class="price-sale">&#8363;{{{salePrice}}}</span></p>
-								{{else}}
-								<p class="price"><span class="mr-2 price-sale">&#8363;{{{price}}}</span></p>
-								{{/if}}
+							<span class="status">SALE</span>
+							{{/if}}
+							<div class="overlay"></div>
+						</a>
+						<div class="text py-3 pb-4 px-3 text-center">
+							<h3><a href="/chi-tiet?productId={{{_id}}}">{{{name}}}</a></h3>
+							<div class="d-flex">
+								<div class="pricing">
+									{{#if salePrice}}
+									<p class="price"><span class="mr-2 price-dc">&#8363;{{{price}}}</span><span
+											class="price-sale">&#8363;{{{salePrice}}}</span></p>
+									{{else}}
+									<p class="price"><span class="mr-2 price-sale">&#8363;{{{price}}}</span></p>
+									{{/if}}
+								</div>
 							</div>
-						</div>
-						<div class="bottom-area d-flex px-3">
-							<div class="m-auto d-flex">
-								<a href="#"
-									class="add-to-cart d-flex justify-content-center align-items-center text-center">
-									<span><i class="ion-ios-menu"></i></span>
-								</a>
-								<a href="#" class="buy-now d-flex justify-content-center align-items-center mx-1">
-									<span><i class="ion-ios-cart"></i></span>
-								</a>
-								<a href="#" class="heart d-flex justify-content-center align-items-center ">
-									<span><i class="ion-ios-heart"></i></span>
-								</a>
+							<div class="bottom-area d-flex px-3">
+								<div class="m-auto d-flex">
+									<a href="#"
+										class="add-to-cart d-flex justify-content-center align-items-center text-center">
+										<span><i class="ion-ios-menu"></i></span>
+									</a>
+									<a href="#" class="buy-now d-flex justify-content-center align-items-center mx-1">
+										<span><i class="ion-ios-cart"></i></span>
+									</a>
+									<a href="#" class="heart d-flex justify-content-center align-items-center ">
+										<span><i class="ion-ios-heart"></i></span>
+									</a>
+								</div>
 							</div>
 						</div>
 					</div>
 				</div>
+				{{/each}}
 			</div>
-			{{/each}}
-    			
-    			
+		</div>
+	</section>
 
 
-    			
-    			
-    			
-    			
-    		</div>
-    	</div>
-    </section>
-		
-
-		<section class="ftco-section ftco-no-pt ftco-no-pb py-5 bg-light">
-      <div class="container py-4">
-        <div class="row d-flex justify-content-center py-5">
-          <div class="col-md-6">
-          	<h2 style="font-size: 22px;" class="mb-0">Đăng kí theo dõi</h2>
-          	<span>Nhận email về những mặt hàng và khuyến mãi mới nhất</span>
-          </div>
-          <div class="col-md-6 d-flex align-items-center">
-            <form action="#" class="subscribe-form">
-              <div class="form-group d-flex">
-                <input type="text" class="form-control" placeholder="Nhập địa chỉ email">
-                <input type="submit" value="Đăng kí" class="submit px-3">
-              </div>
-            </form>
-          </div>
-        </div>
-      </div>
-    </section>
+	<section class="ftco-section ftco-no-pt ftco-no-pb py-5 bg-light">
+		<div class="container py-4">
+			<div class="row d-flex justify-content-center py-5">
+				<div class="col-md-6">
+					<h2 style="font-size: 22px;" class="mb-0">Đăng kí theo dõi</h2>
+					<span>Nhận email về những mặt hàng và khuyến mãi mới nhất</span>
+				</div>
+				<div class="col-md-6 d-flex align-items-center">
+					<form action="#" class="subscribe-form">
+						<div class="form-group d-flex">
+							<input type="text" class="form-control" placeholder="Nhập địa chỉ email">
+							<input type="submit" value="Đăng kí" class="submit px-3">
+						</div>
+					</form>
+				</div>
+			</div>
+		</div>
+	</section>
