--- a/views/dang-nhap.hbs
+++ b/views/dang-nhap.hbs
@@ -4,10 +4,13 @@
 <div class="limiter">
 	<div class="container-login100">
 		<div class="wrap-login100">
-			<form class="login100-form validate-form p-l-55 p-r-55 p-t-178">
+			<form class="login100-form validate-form p-l-55 p-r-55 p-t-178" method="post">
 				<span class="login100-form-title">
 					Đăng nhập
 				</span>
+				{{#if error }}
+				<span style="color: red; font-size: 2em;">{{error}}</span>
+				{{/if}}
 
 				<div class="wrap-input100 validate-input m-b-16" data-validate="Please enter username">
 					<input class="input100" type="text" name="username" placeholder="Tên đăng nhập">
@@ -15,7 +18,7 @@
 				</div>
 
 				<div class="wrap-input100 validate-input" data-validate="Please enter password">
-					<input class="input100" type="password" name="pass" placeholder="Mật khẩu">
+					<input class="input100" type="password" name="password" placeholder="Mật khẩu">
 					<span class="focus-input100"></span>
 				</div>
 
