+ passport js, chưa config

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -77,10 +77,14 @@
             </div>
           </li>
           <li class="nav-item"><a href="/ve-chung-toi" class="nav-link">Về chúng tôi</a></li>
+          {{#if user}}
+              <li class="nav-item">Xin chào <a href="/thong-tin" class="nav-link">{{user.username}}</a></li>
+              <li class="nav-item"><a href="/thong-tin" class="nav-link">Thông tin tài khoản</a></li>
+              <li class="nav-item"><a href="/dang-nhap" class="nav-link">Đăng xuất</a></li>
+          {{else}}
           <li class="nav-item"><a href="/dang-nhap" class="nav-link">Đăng nhập</a></li>
           <li class="nav-item"><a href="/dang-ki" class="nav-link">Đăng kí</a></li>
-          <li class="nav-item"><a href="/thong-tin" class="nav-link">Thông tin tài khoản</a></li>
-
+          {{/if}}
 
           <li class="nav-item cta cta-colored"><a href="/gio-hang" class="nav-link"><span
                 class="icon-shopping_cart"></span>[0]</a></li>
