--- a/views/dang-nhap.hbs
+++ b/views/dang-nhap.hbs
@@ -33,7 +33,7 @@
 						Đăng nhập
 					</button>
 				</div>
-				<div id = "modalLoginSuccess" class="modal fade text-center">
+				{{!--<div id = "modalLoginSuccess" class="modal fade text-center">
 					<div class="modal-dialog modal-confirm">
 						<div class="modal-content">
 							<div class="modal-header">
@@ -51,7 +51,7 @@
 							</div>
 						</div>
 					</div>
-				</div>
+				</div>--}}
 					<div id = "modalForgotPass" class="modal fade text-center">
 					<div class="modal-dialog modal-confirm">
 						<div class="modal-content">
