--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -79,7 +79,7 @@
           <li class="nav-item"><a href="/ve-chung-toi" class="nav-link">Về chúng tôi</a></li>
           {{#if user}}
               <li class="nav-item"><a href="/thong-tin" class="nav-link">Xin chào {{user.username}}</a></li>
-              <li class="nav-item"><a href="/dang-nhap" class="nav-link">Đăng xuất</a></li>
+              <li class="nav-item"><a href="/dang-xuat" class="nav-link">Đăng xuất</a></li>
           {{else}}
           <li class="nav-item"><a href="/dang-nhap" class="nav-link">Đăng nhập</a></li>
           <li class="nav-item"><a href="/dang-ki" class="nav-link">Đăng kí</a></li>
