+ controller user, sản phẩm

--- a/views/san-pham.hbs
+++ b/views/san-pham.hbs
@@ -25,7 +25,7 @@
 			{{#each products}}
 			<div class="col-md-6 col-lg-3 ftco-animate">
 				<div class="product">
-					<a href="/chi-tiet?productId={{{_id}}}" class="img-prod"><img class="img-fluid" src="{{{img}}}"
+					<a href="/san-pham/chi-tiet?productId={{{_id}}}" class="img-prod"><img class="img-fluid" src="{{{img}}}"
 							alt="Colorlib Template">
 							{{#if salePrice}}
 						<span class="status">SALE</span>
@@ -33,7 +33,7 @@
 						<div class="overlay"></div>
 					</a>
 					<div class="text py-3 pb-4 px-3 text-center">
-						<h3><a href="/chi-tiet?productId={{{_id}}}">{{{name}}}</a></h3>
+						<h3><a href="/san-pham/chi-tiet?productId={{{_id}}}">{{{name}}}</a></h3>
 						<div class="d-flex">
 							<div class="pricing">
 								{{#if salePrice}}
@@ -62,44 +62,6 @@
 				</div>
 			</div>
 			{{/each}}
-
-			{{!-- <div class="col-md-6 col-lg-3 ftco-animate">
-    				<div class="product">
-    					<a href="/mot-san-pham/ca-chua" class="img-prod"><img class="img-fluid" src="images/product-5.jpg" alt="Colorlib Template">
-    						<span class="status">30%</span>
-    						<div class="overlay"></div>
-    					</a>
-    					<div class="text py-3 pb-4 px-3 text-center">
-    						<h3><a href="/mot-san-pham/ca-chua">Cà chua</a></h3>
-    						<div class="d-flex">
-    							<div class="pricing">
-		    						<p class="price"><span class="mr-2 price-dc">&#8363;120.000</span><span class="price-sale">&#8363;80.000</span></p>
-		    					</div>
-	    					</div>
-	    					<div class="bottom-area d-flex px-3">
-	    						<div class="m-auto d-flex">
-	    							<a href="#" class="add-to-cart d-flex justify-content-center align-items-center text-center">
-	    								<span><i class="ion-ios-menu"></i></span>
-	    							</a>
-	    							<a href="#" class="buy-now d-flex justify-content-center align-items-center mx-1">
-	    								<span><i class="ion-ios-cart"></i></span>
-	    							</a>
-	    							<a href="#" class="heart d-flex justify-content-center align-items-center ">
-	    								<span><i class="ion-ios-heart"></i></span>
-	    							</a>
-    							</div>
-    						</div>
-    					</div>
-    				</div>
-    			</div> --}}
-
-
-
-
-
-
-
-
 		</div>
 		<div class="row mt-5">
 			<div class="col text-center">
