--- a/views/thong-tin.hbs
+++ b/views/thong-tin.hbs
@@ -7,7 +7,7 @@
             <div class="row form-group">
                 <div class="col col-md-3"><label class=" form-control-label">Tên đăng nhập</label></div>
                 <div class="col-12 col-md-9">
-                    <p class="form-control-static">hieudeptrai_9x</p>
+                    <p class="form-control-static">{{user.username}}</p>
                 </div>
             </div>
             <div class="row form-group">
