--- a/views/index.hbs
+++ b/views/index.hbs
@@ -146,7 +146,7 @@
 				{{#each products}}
 				<div class="col-md-6 col-lg-3 ftco-animate">
 					<div class="product">
-						<a href="/chi-tiet?productId={{{_id}}}" class="img-prod"><img class="img-fluid" src="{{{img}}}"
+						<a href="/san-pham/chi-tiet?productId={{{_id}}}" class="img-prod"><img class="img-fluid" src="{{{img}}}"
 								alt="Colorlib Template">
 							{{#if salePrice}}
 							<span class="status">SALE</span>
@@ -154,7 +154,7 @@
 							<div class="overlay"></div>
 						</a>
 						<div class="text py-3 pb-4 px-3 text-center">
-							<h3><a href="/chi-tiet?productId={{{_id}}}">{{{name}}}</a></h3>
+							<h3><a href="/san-pham/chi-tiet?productId={{{_id}}}">{{{name}}}</a></h3>
 							<div class="d-flex">
 								<div class="pricing">
 									{{#if salePrice}}
