! try catch các hàm truy vấn. +form filter sản phẩm

--- a/views/mot-san-pham.hbs
+++ b/views/mot-san-pham.hbs
@@ -85,7 +85,7 @@
     		{{#each relaProducts}}
 			<div class="col-md-6 col-lg-3 ftco-animate">
 				<div class="product">
-					<a href="/chi-tiet?productId={{{_id}}}" class="img-prod"><img class="img-fluid" src="{{{img}}}"
+					<a href="/san-pham/chi-tiet?productId={{{_id}}}" class="img-prod"><img class="img-fluid" src="{{{img}}}"
 							alt="Colorlib Template">
 							{{#if salePrice}}
 						<span class="status">SALE</span>
@@ -93,7 +93,7 @@
 						<div class="overlay"></div>
 					</a>
 					<div class="text py-3 pb-4 px-3 text-center">
-						<h3><a href="/chi-tiet?productId={{{_id}}}">{{{name}}}</a></h3>
+						<h3><a href="/san-pham/chi-tiet?productId={{{_id}}}">{{{name}}}</a></h3>
 						<div class="d-flex">
 							<div class="pricing">
 								{{#if salePrice}}
