--- a/views/dang-nhap.hbs
+++ b/views/dang-nhap.hbs
@@ -74,7 +74,7 @@
 					<span class="txt1 p-b-9">
 						Chưa có tài khoản?
 					</span>
-					<a href="/dang-ki" class="txt3">
+					<a href="users/dang-ki" class="txt3">
 						Đăng kí ngay
 					</a>
 				</div>
