--- a/views/san-pham.hbs
+++ b/views/san-pham.hbs
@@ -112,19 +112,19 @@
 				<div class="block-27">
 					<ul>
 						{{#paginate pagination type="first"}}
-						<li {{#if disabled}}class="disabled" {{/if}}><a href="?p={{n}}#categories">&lt;&lt;</a></li>
+						<li {{#if disabled}}class="disabled" {{/if}}><a href="?p={{n}}#formsection">&lt;&lt;</a></li>
 						{{/paginate}}
 						{{#paginate pagination type="previous"}}
 						<li {{#if disabled}}class="disabled" {{/if}}><a href="{{page_url}}?p={{n}}#formsection">&lt;</a></li>
 						{{/paginate}}
-						{{#paginate pagination type="middle" limit="5"}}
+						{{#paginate pagination type="middle" limit="7"}}
 						<li {{#if active}} class="active" {{/if}}><a href="?p={{n}}#formsection">{{n}}</a></li>
 						{{/paginate}}
 						{{#paginate pagination type="next"}}
 						<li {{#if disabled}}class="disabled" {{/if}}><a href="{{page_url}}?p={{n}}#formsection">&gt;</a></li>
 						{{/paginate}}
 						{{#paginate pagination type="last"}}
-						<li {{#if disabled}}class="disabled" {{/if}}><a href="?p={{n}}#categories">&gt;&gt;</a></li>
+						<li {{#if disabled}}class="disabled" {{/if}}><a href="?p={{n}}#formsection">&gt;&gt;</a></li>
 						{{/paginate}}
 					</ul>
 					
